<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deturp Studio</string>
    <string name="app_shortname">DETURP</string>
    <string name="action_quitbutton">Kill</string>
    <string name="action_add">New track</string>
    <string name="action_edit">Rename track</string>

    <string name="editdialog_trackname_text">Track name</string>
    <string name="file_button_text">Select file (mp3 only)</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="stop_button_text">Stop</string>
    <string name="play_text">Play</string>
    <string name="pause_text">Pause</string>

</resources>
