<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/editdialog_trackname_text"
        android:id="@+id/trackname_edit_text"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:splitMotionEvents="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"
            android:id="@+id/save_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:id="@+id/cancel_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>