<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:splitMotionEvents="false"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/controls"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        >

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/play_text"
            android:textOn="@string/pause_text"
            android:id="@+id/toggle_button_play"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stop_button_text"
            android:id="@+id/button_stop"
            />


    </LinearLayout>

</LinearLayout>
